# dpdk-qdispatcher

./: .gitignore  CMakeLists.txt  Makefile  qdispatcher.c  qdispatcher.h
src/: qdc.c  qdc.h  qdispatcher.c  qdispatcher.h  util.h
test/: CMakeLists.txt  join-leave.c  xmit.c
